--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=769085ebb7e2ebb85139f4fdb370cf55
 ###< symfony/framework-bundle ###
 
